[package]
name = "config-validator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.196", features = ["derive"] }
clap = { version = "4.4.18", features = ["derive"] }
tempfile = "3.9.0"

[dev-dependencies]
assert_cmd = "2.0.13"
predicates = "3.1.0"
tempfile = "3.9.0"